gitlab/gitlab-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    labels:
        k8s-app: gitlab
    name: gitlab
    namespace: gitlab
spec:
    strategy:
        rollingUpdate:
            maxSurge: 100%
            maxUnavailable: 100%
        type: RollingUpdate
    replicas: 1
    template:
        metadata:
          labels:
            k8s-app: gitlab
        spec:
            containers:
            - name: gitlab-ee
              image: gitlab/gitlab-ee
              imagePullPolicy: IfNotPresent
              ports:
              - name: ssh
                containerPort: 22
              - name: registry
                containerPort: 8105
              - name: workhorse
                containerPort: 8005
              livenessProbe:
                httpGet:
                    path: /-/readiness?token=ENV['GITLAB_HEALTH_TOKEN']
                    port: 8005
                initialDelaySeconds: 600
                timeoutSeconds: 1
                periodSeconds: 10
                successThreshold: 1
                failureThreshold: 10
              readinessProbe:
                httpGet:
                    path: /-/readiness?token=ENV['GITLAB_HEALTH_TOKEN']
                    port: 8005
                initialDelaySeconds: 30
                timeoutSeconds: 1
                periodSeconds: 10
                successThreshold: 1
                failureThreshold: 3
              volumeMounts:
              - name: gitlab-etc
                mountPath: /etc/gitlab
              - name: gitlab-data
                mountPath: /gitlab-data
              - name: gitlab-registry
                mountPath: /gitlab-registry
            volumes:
            - name: gitlab-etc
              persistentVolumeClaim:
                claimName: gitlab-etc
            - name: gitlab-data
              persistentVolumeClaim:
                claimName: gitlab-data
            - name: gitlab-registry
              persistentVolumeClaim:
                claimName: gitlab-registry
