gitlab/gitlab-runner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: gitlab-runner
  name: gitlab-runner
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: gitlab-runner
  template:
    metadata:
      labels:
        k8s-app: gitlab-runner
    spec:
      serviceAccountName: gitlab-runner
      containers:
      - args:
        - run
        image: gitlab/gitlab-runner:latest
        imagePullPolicy: Always
        name: gitlab-runner
        volumeMounts:
        - mountPath: /etc/gitlab-runner
          name: config
        - mountPath: /etc/ssl/certs
          name: cacerts
          readOnly: true
      restartPolicy: Always
      volumes:
      - configMap:
          name: gitlab-runner-config
        name: config
      - hostPath:
          path: /etc/ssl/certs
        name: cacerts
