gitlab/postgres-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
    labels:
        k8s-app: gitlab
    name: gitlab-postgres
    namespace: gitlab
spec:
    replicas: 1
    template:
        metadata:
            labels:
                k8s-app: gitlab
        spec:
            containers:
            - name: postgres
              image: postgres:10
              imagePullPolicy: Always
              ports:
              - name: postgres
                containerPort: 5432
              volumeMounts:
              - mountPath: "/var/lib/postgresql"
                name: data
              livenessProbe:
                exec:
                    command:
                    - pg_isready
                    - -h
                    - localhost
                    - -U
                    - postgres
                initialDelaySeconds: 30
                timeoutSeconds: 5
              readinessProbe:
                exec:
                    command:
                    - pg_isready
                    - -h
                    - localhost
                    - -U
                    - postgres
                initialDelaySeconds: 30
                timeoutSeconds: 5
            volumes:
            - name: data
              persistentVolumeClaim:
                claimName: gitlab-postgres-data
