gitlab/redis-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
      k8s-app: redis
  name: redis
  namespace: gitlab
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: redis
    spec:
      containers:
      - name: redis
        image: redis:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - mountPath: "/var/lib/redis"
          name: redis-data
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 30
          timeoutSeconds: 5
      restartPolicy: Always
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data
