gitlab/gitlab-ssh-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: gitlab
    name: gitlab-ssh
    namespace: gitlab
spec:
    externalIPs:
    - 77.80.255.100
    ports:
    - port: 22
      protocol: TCP
      targetPort: 22
    selector:
        k8s-app: gitlab
    type: ClusterIP
