gitlab/gitlab-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: gitlab
    name: gitlab
    namespace: gitlab
spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
        k8s-app: gitlab
    type: ClusterIP
