gitlab/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: postgres
    name: postgres
    namespace: gitlab
spec:
    ports:
    - name: postgres
      port: 5432
      targetPort: postgres
    selector:
        k8s-app: postgres
