gitlab/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        k8s-app: gitlab
    name: redis
    namespace: gitlab
spec:
    ports:
    - name: redis
      port: 6379
      targetPort: redis
    selector:
        k8s-app: redis
