gitlab/gitlab-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    labels:
        k8s-app: gitlab
    name: gitlab-ingress
    namespace: gitlab
    annotations:
        kubernetes.io/tls-acme: "true"
        # 4G for Git LFS
        nginx.ingress.kubernetes.io/proxy-body-size: "4000m"
spec:
    tls:
    - secretName: gitlab-ingress-tls
      hosts:
      - gitlab.tech.dreamhack.se
      - registry.tech.dreamhack.se
    rules:
    - host: gitlab.tech.dreamhack.se
      http:
        paths:
        - path: /
          backend:
            serviceName: gitlab
            servicePort: 8005
    - host: registry.tech.dreamhack.se
      http:
        paths:
        - path: /
          backend:
            serviceName: gitlab
            servicePort: 8105
